--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,13 @@ a {
   text-decoration: none;
 }
 
+img {
+  max-width: 100%;
+}
+
+li{
+  list-style: none;
+}
 
 .contenedor {
   width: 98%;
@@ -366,143 +373,237 @@ p.slogan span {
 }
 
 /**talleres**/
-.programa{
-  position:relative;
+
+.programa {
+  position: relative;
 }
 
-.contenedor-video{
+.contenedor-video {
   max-width: 100%;
   overflow-x: hidden;
 }
 
-.contenido-programa{
-  position:absolute;
-  top:0;
-  left:0;
+.contenido-programa {
+  position: absolute;
+  top: 0;
+  left: 0;
   height: 100%;
   width: 100%;
 }
 
-.programa-evento{
+.programa-evento {
   background-color: rgba(255, 255, 255, 0.829);
-  padding:1.5rem;
-  margin-top:8rem;
+  padding: 1.5rem;
+  margin-top: 8rem;
 }
 
-@media(min-width:768px){
-  .programa-evento{
-  width: 80%;
+@media(min-width:768px) {
+  .programa-evento {
+    width: 80%;
   }
 }
 
-@media(min-width:992px){
-  .programa-evento{
+@media(min-width:992px) {
+  .programa-evento {
     width: 50%;
   }
 }
 
-.menu-programa{
+.menu-programa {
   width: 100%;
-  border-bottom:0.1rem solid var(--colornaranja);
-  padding-bottom:1rem;
+  border-bottom: 0.1rem solid var(--colornaranja);
+  padding-bottom: 1rem;
 }
 
-.menu-programa a{
-  display:flex;
-  flex-direction:column;
+.menu-programa a {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items:center;
-  padding-bottom:1rem;
-  margin-bottom:1rem;
-  font-family:var(--fuenteoswald);
-  color:black;
-  font-size:2rem;
+  align-items: center;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+  font-family: var(--fuenteoswald);
+  color: black;
+  font-size: 2rem;
 }
 
-.menu-programa a i{
-  color:var(--colornaranja);
-  font-size:3rem;
+.menu-programa a i {
+  color: var(--colornaranja);
+  font-size: 3rem;
 }
 
-@media(min-width:768px){
-
-  .menu-programa a{
-    display:inline-block;
+@media(min-width:768px) {
+  .menu-programa a {
+    display: inline-block;
     margin-right: 3rem;
-    padding-bottom:0;
-    font-size:2.5rem;
+    padding-bottom: 0;
+    font-size: 2.5rem;
   }
-
-  .menu-programa a i{
+  .menu-programa a i {
     margin-right: 1rem;
   }
 }
 
 /**eventos**/
-.detalle-evento{
-  margin-top:1rem;
+
+.detalle-evento {
+  margin-top: 1rem;
   border-bottom: 0.1rem solid black;
   padding: 0 1rem;
 }
 
-.detalle-evento:last-of-type{
+.detalle-evento:last-of-type {
   border-bottom: none;
 }
 
-.detalle-evento p{
+.detalle-evento p {
   font-size: 2rem;
   margin-bottom: 1.7rem;
-  
 }
 
-.detalle-evento p i{
-  margin-right:1rem;
-  color:var(--colornaranja);
-  font-size:2.2rem;
+.detalle-evento p i {
+  margin-right: 1rem;
+  color: var(--colornaranja);
+  font-size: 2.2rem;
 }
 
-.detalle-evento h3{
-  color:var( --colornaranja);
-  font-size:2rem;
-  margin:1rem 0 0 0;
+.detalle-evento h3 {
+  color: var( --colornaranja);
+  font-size: 2rem;
+  margin: 1rem 0 0 0;
 }
 
-.boton{
-  display:inline-block;
+.boton {
+  display: inline-block;
   background-color: var(--colornaranja);
   padding: 1.5rem 4rem;
-  color:white;
+  color: white;
   text-transform: uppercase;
-  font-family:var(--fuenteoswald);
+  font-family: var(--fuenteoswald);
   font-weight: bold;
-  font-size:1.8rem;
-  margin-top:1.5rem;
+  font-size: 1.8rem;
+  margin-top: 1.5rem;
   transition: all 0.2s ease-in-out;
 }
 
-.boton:hover{
+.boton:hover {
   background-color: #e33000;
 }
 
-.float-right{
+.float-right {
   float: right;
 }
 
 /**seccion invitados**/
-.lista-invitados{
-  display:grid;
-  grid-template-columns:repeat(2, 1fr);
-  gap:2rem;
-  grid-gap: 2rem;
-  align-items:center;
- 
+
+.lista-invitados {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 1rem;
+  row-gap: 1.5rem;
+}
+
+.lista-invitados .invitado p {
+  background-color: rgba(0, 0, 0, 0.603);
+  color: var(--colornaranja);
+  text-align: left;
+  text-transform: uppercase;
+  font-family: var(--fuenteoswald);
+  padding: 1rem;
+  margin-top: 0.2rem;
+  transition: all 0.3s ease-in-out;
+}
+
+@media(min-width:768px) {
+  .lista-invitados {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 4rem;
+  }
+  .lista-invitados .invitado {
+    position: relative;
+  }
+  .lista-invitados .invitado p {
+    position: absolute;
+    padding: 1.5rem 0 1.5rem 1rem;
+    display: inline-block;
+    width: 100%;
+    margin: 0;
+    z-index: 1;
+    left: 0;
+    bottom: 0;
+  }
+}
+
+.lista-invitados .invitado img {
+  filter: grayscale(1);
+  transition: all 0.3s ease-in-out;
+}
+
+.lista-invitados .invitado:hover img {
+  filter: grayscale(0);
+  transform: scale(1.1);
+}
+
+.lista-invitados .invitado:hover p {
+  bottom: -2rem;
+  opacity: 0;
+}
+
+/**contador**/
+
+.parallax::before {
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+  filter: brightness(0.5);
+}
+
+.contador {
+  position: relative;
+  height: auto;
+}
+
+.contador::before {
+  content: '';
+  background-image: url(../img/bg-resumen.jpg);
+}
+
+.resumen-evento {
+  position: relative;
+  padding: 2rem 0;
+}
+
+.resumen-evento li{
+  width:50%;
+  float:left;
+  text-align: center;
+  color:white;
+  text-transform:uppercase;
+  font-family:var(--fuenteoswald);
+  font-size:2.4rem;
 }
 
 @media(min-width:768px){
-  .lista-invitados{
-    grid-template-columns:repeat(3, 1fr);
+  .resumen-evento li{
+    width: 25%;
   }
+  
 }
+p.numero{
+  color:var(--colornaranja);
+  font-weight: bold;
+  font-size:7rem;
+  margin:0 0 1rem 0;
+  display:block;
+}
+
 
 
 
